y.output
Terminals unused in grammar

   NR
   ENDIF


Grammar

    0 $accept: progr $end

    1 progr: biblioteci declaratii mainul

    2 biblioteci: biblioteci BB
    3           | %empty

    4 mainul: INTMAIN instructiuni ENDMAIN

    5 declaratii: declaratii declaratie
    6           | %empty

    7 declaratie: variabila
    8           | matrice
    9           | cub
   10           | vector
   11           | functie
   12           | clasa

   13 variabila: TIP ID ';'
   14          | TIP ID ASSIGN regex ';'
   15          | STRING ID ';'
   16          | STRING ID ASSIGN STR ';'

   17 vector: TIP '[' INDEX ']' ID ';'
   18       | TIP '[' INDEX ']' ID ASSIGN regex ';'

   19 matrice: TIP '[' INDEX ']' '[' INDEX ']' ID ';'
   20        | TIP '[' INDEX ']' '[' INDEX ']' ID ASSIGN '{' regex ',' regex '}' ';'

   21 cub: TIP '[' INDEX ']' '[' INDEX ']' '[' INDEX ']' ID ';'
   22    | TIP '[' INDEX ']' '[' INDEX ']' '[' INDEX ']' ID ASSIGN '{' regex ',' regex ',' regex '}' ';'

   23 functie: FUNCT TIP ID '(' lista_param ')' in_functie ENDFUNCT ';'

   24 clasa: CLASS ID in_clasa ENDCLASS ';' class_objects

   25 class_objects: class_objects ID ID ';'
   26              | %empty

   27 in_clasa: variabila_from_cl in_clasa
   28         | matrice_from_cl in_clasa
   29         | cub_from_cl in_clasa
   30         | vector_from_cl in_clasa
   31         | statement ';' in_clasa
   32         | fruntie_in_clasa

   33 fruntie_in_clasa: fruntie_in_clasa functie2
   34                 | %empty

   35 functie2: FUNCT TIP ID '(' lista_param ')' in_functie ENDFUNCT ';'

   36 in_functie: decla_for_funct in_functie
   37           | statement ';' in_functie
   38           | return

   39 return: RETURN regex ';'
   40       | %empty

   41 decla_for_funct: vector_from_funct
   42                | matrice_from_funct
   43                | cub_from_funct
   44                | variabila_from_funct

   45 variabila_from_funct: TIP ID ';'
   46                     | TIP ID ASSIGN regex ';'
   47                     | STRING ID ';'
   48                     | STRING ID ASSIGN STR ';'

   49 vector_from_funct: TIP '[' INDEX ']' ID ';'
   50                  | TIP '[' INDEX ']' ID ASSIGN regex ';'

   51 matrice_from_funct: TIP '[' INDEX ']' '[' INDEX ']' ID ';'
   52                   | TIP '[' INDEX ']' '[' INDEX ']' ID ASSIGN '{' regex ',' regex '}' ';'

   53 cub_from_funct: TIP '[' INDEX ']' '[' INDEX ']' '[' INDEX ']' ID ';'
   54               | TIP '[' INDEX ']' '[' INDEX ']' '[' INDEX ']' ID ASSIGN '{' regex ',' regex ',' regex '}' ';'

   55 variabila_from_cl: TIP ID ';'
   56                  | TIP ID ASSIGN regex ';'
   57                  | STRING ID ';'
   58                  | STRING ID ASSIGN STR ';'

   59 vector_from_cl: TIP '[' INDEX ']' ID ASSIGN regex ';'
   60               | TIP '[' INDEX ']' ID ';'

   61 matrice_from_cl: TIP '[' INDEX ']' '[' INDEX ']' ID ASSIGN '{' regex ',' regex '}' ';'
   62                | TIP '[' INDEX ']' '[' INDEX ']' ID ';'

   63 cub_from_cl: TIP '[' INDEX ']' '[' INDEX ']' '[' INDEX ']' ID ASSIGN '{' regex ',' regex ',' regex '}' ';'
   64            | TIP '[' INDEX ']' '[' INDEX ']' '[' INDEX ']' ID ';'

   65 lista_param: parametru
   66            | parametru parametri
   67            | %empty

   68 parametri: ',' parametru
   69          | ',' parametru parametri

   70 parametru: TIP ID

   71 instructiuni: statement ';'
   72             | instructiuni statement ';'

   73 statement: ID '(' lista_param2 ')'
   74          | ID '.' ID '(' lista_param2 ')'
   75          | ID '.' ID ASSIGN regex
   76          | ID ASSIGN regex
   77          | ID '+' '+'
   78          | ID '-' '-'
   79          | '[' INDEX ']' ID ASSIGN regex
   80          | '[' INDEX ']' '[' INDEX ']' ID ASSIGN '{' regex ',' regex '}'
   81          | '[' INDEX ']' '[' INDEX ']' '[' INDEX ']' ID ASSIGN '{' regex ',' regex ',' regex '}'
   82          | STRREV '(' ID ')'
   83          | STRCAT '(' ID ',' ID ')'
   84          | STRCAT '(' ID ',' STR ')'
   85          | PRINT '(' e ',' TIP ')'
   86          | EVAL '(' e ')' '[' ID ']'
   87          | intructiuni

   88 intructiuni: IF '(' condition_for_instr ')' THEN instructiuni ENDTHEN
   89            | IF '(' condition_for_instr ')' THEN instructiuni ENDTHEN ELSE instructiuni ENDELSE
   90            | WHILE '(' condition_for_instr ')' instructiuni ENDWHILE
   91            | FOR '(' TIP ID ASSIGN regex ';' condition_for_instr ';' statement ')' instructiuni ENDFOR

   92 condition_for_instr: regex OPLOG regex
   93                    | '(' condition_for_instr ')' OPLOG regex
   94                    | regex OPLOG '(' condition_for_instr ')'
   95                    | '(' condition_for_instr ')' OPLOG '(' condition_for_instr ')'

   96 regex: '(' regex '*' regex ')'
   97      | '(' regex '/' regex ')'
   98      | '(' regex '+' regex ')'
   99      | '(' regex '-' regex ')'
  100      | '(' regex '%' regex ')'
  101      | '(' regex '&' '&' regex ')'
  102      | '(' regex '|' '|' regex ')'
  103      | '!' regex
  104      | e
  105      | number

  106 number: INDEX
  107       | NR_NEG
  108       | NR_FLOAT

  109 e: ID
  110  | ID '.' ID
  111  | '[' INDEX ']' ID
  112  | '[' INDEX ']' '[' INDEX ']' ID
  113  | '[' INDEX ']' '[' INDEX ']' '[' INDEX ']' ID
  114  | ID '.' ID '(' lista_param2 ')'
  115  | ID '(' lista_param2 ')'
  116  | STRLEN '(' ID ')'
  117  | STRLEN '(' STR ')'
  118  | STRCMP '(' ID ',' ID ')'
  119  | STRCMP '(' ID ',' STR ')'
  120  | STRCMP '(' STR ',' ID ')'
  121  | STRCMP '(' STR ',' STR ')'

  122 lista_param2: parametru2
  123             | parametru2 parametri2
  124             | %empty

  125 parametri2: ',' parametru2
  126           | parametri2 ',' parametru2

  127 parametru2: regex


Terminals, with rules where they appear

$end (0) 0
'!' (33) 103
'%' (37) 100
'&' (38) 101
'(' (40) 23 35 73 74 82 83 84 85 86 88 89 90 91 93 94 95 96 97 98 99
    100 101 102 114 115 116 117 118 119 120 121
')' (41) 23 35 73 74 82 83 84 85 86 88 89 90 91 93 94 95 96 97 98 99
    100 101 102 114 115 116 117 118 119 120 121
'*' (42) 96
'+' (43) 77 98
',' (44) 20 22 52 54 61 63 68 69 80 81 83 84 85 118 119 120 121 125
    126
'-' (45) 78 99
'.' (46) 74 75 110 114
'/' (47) 97
';' (59) 13 14 15 16 17 18 19 20 21 22 23 24 25 31 35 37 39 45 46 47
    48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 71 72 91
'[' (91) 17 18 19 20 21 22 49 50 51 52 53 54 59 60 61 62 63 64 79 80
    81 86 111 112 113
']' (93) 17 18 19 20 21 22 49 50 51 52 53 54 59 60 61 62 63 64 79 80
    81 86 111 112 113
'{' (123) 20 22 52 54 61 63 80 81
'|' (124) 102
'}' (125) 20 22 52 54 61 63 80 81
error (256)
ASSIGN (258) 14 16 18 20 22 46 48 50 52 54 56 58 59 61 63 75 76 79
    80 81 91
OPLOG (259) 92 93 94 95
NR (260)
BB (261) 2
FUNCT (262) 23 35
ENDFUNCT (263) 23 35
WHILE (264) 90
ENDWHILE (265) 90
IF (266) 88 89
ENDIF (267)
FOR (268) 91
ENDFOR (269) 91
THEN (270) 88 89
ENDTHEN (271) 88 89
ELSE (272) 89
ENDELSE (273) 89
RETURN (274) 39
CLASS (275) 24
ENDCLASS (276) 24
STRING (277) 15 16 47 48 57 58
STRLEN (278) 116 117
STRCMP (279) 118 119 120 121
STRREV (280) 82
STRCAT (281) 83 84
PRINT (282) 85
INTMAIN (283) 4
ENDMAIN (284) 4
EVAL (285) 86
INDEX (286) 17 18 19 20 21 22 49 50 51 52 53 54 59 60 61 62 63 64 79
    80 81 106 111 112 113
NR_NEG (287) 107
NR_FLOAT (288) 108
TIP (289) 13 14 17 18 19 20 21 22 23 35 45 46 49 50 51 52 53 54 55
    56 59 60 61 62 63 64 70 85 91
ID (290) 13 14 15 16 17 18 19 20 21 22 23 24 25 35 45 46 47 48 49 50
    51 52 53 54 55 56 57 58 59 60 61 62 63 64 70 73 74 75 76 77 78
    79 80 81 82 83 84 86 91 109 110 111 112 113 114 115 116 118 119
    120
STR (291) 16 48 58 84 117 119 120 121


Nonterminals, with rules where they appear

$accept (54)
    on left: 0
progr (55)
    on left: 1, on right: 0
biblioteci (56)
    on left: 2 3, on right: 1 2
mainul (57)
    on left: 4, on right: 1
declaratii (58)
    on left: 5 6, on right: 1 5
declaratie (59)
    on left: 7 8 9 10 11 12, on right: 5
variabila (60)
    on left: 13 14 15 16, on right: 7
vector (61)
    on left: 17 18, on right: 10
matrice (62)
    on left: 19 20, on right: 8
cub (63)
    on left: 21 22, on right: 9
functie (64)
    on left: 23, on right: 11
clasa (65)
    on left: 24, on right: 12
class_objects (66)
    on left: 25 26, on right: 24 25
in_clasa (67)
    on left: 27 28 29 30 31 32, on right: 24 27 28 29 30 31
fruntie_in_clasa (68)
    on left: 33 34, on right: 32 33
functie2 (69)
    on left: 35, on right: 33
in_functie (70)
    on left: 36 37 38, on right: 23 35 36 37
return (71)
    on left: 39 40, on right: 38
decla_for_funct (72)
    on left: 41 42 43 44, on right: 36
variabila_from_funct (73)
    on left: 45 46 47 48, on right: 44
vector_from_funct (74)
    on left: 49 50, on right: 41
matrice_from_funct (75)
    on left: 51 52, on right: 42
cub_from_funct (76)
    on left: 53 54, on right: 43
variabila_from_cl (77)
    on left: 55 56 57 58, on right: 27
vector_from_cl (78)
    on left: 59 60, on right: 30
matrice_from_cl (79)
    on left: 61 62, on right: 28
cub_from_cl (80)
    on left: 63 64, on right: 29
lista_param (81)
    on left: 65 66 67, on right: 23 35
parametri (82)
    on left: 68 69, on right: 66 69
parametru (83)
    on left: 70, on right: 65 66 68 69
instructiuni (84)
    on left: 71 72, on right: 4 72 88 89 90 91
statement (85)
    on left: 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87, on right:
    31 37 71 72 91
intructiuni (86)
    on left: 88 89 90 91, on right: 87
condition_for_instr (87)
    on left: 92 93 94 95, on right: 88 89 90 91 93 94 95
regex (88)
    on left: 96 97 98 99 100 101 102 103 104 105, on right: 14 18 20
    22 39 46 50 52 54 56 59 61 63 75 76 79 80 81 91 92 93 94 96 97
    98 99 100 101 102 103 127
number (89)
    on left: 106 107 108, on right: 105
e (90)
    on left: 109 110 111 112 113 114 115 116 117 118 119 120 121, on right:
    85 86 104
lista_param2 (91)
    on left: 122 123 124, on right: 73 74 114 115
parametri2 (92)
    on left: 125 126, on right: 123 126
parametru2 (93)
    on left: 127, on right: 122 123 125 126


State 0

    0 $accept: . progr $end

    $default  reduce using rule 3 (biblioteci)

    progr       go to state 1
    biblioteci  go to state 2


State 1

    0 $accept: progr . $end

    $end  shift, and go to state 3


State 2

    1 progr: biblioteci . declaratii mainul
    2 biblioteci: biblioteci . BB

    BB  shift, and go to state 4

    $default  reduce using rule 6 (declaratii)

    declaratii  go to state 5


State 3

    0 $accept: progr $end .

    $default  accept


State 4

    2 biblioteci: biblioteci BB .

    $default  reduce using rule 2 (biblioteci)


State 5

    1 progr: biblioteci declaratii . mainul
    5 declaratii: declaratii . declaratie

    FUNCT    shift, and go to state 6
    CLASS    shift, and go to state 7
    STRING   shift, and go to state 8
    INTMAIN  shift, and go to state 9
    TIP      shift, and go to state 10

    mainul      go to state 11
    declaratie  go to state 12
    variabila   go to state 13
    vector      go to state 14
    matrice     go to state 15
    cub         go to state 16
    functie     go to state 17
    clasa       go to state 18


State 6

   23 functie: FUNCT . TIP ID '(' lista_param ')' in_functie ENDFUNCT ';'

    TIP  shift, and go to state 19


State 7

   24 clasa: CLASS . ID in_clasa ENDCLASS ';' class_objects

    ID  shift, and go to state 20


State 8

   15 variabila: STRING . ID ';'
   16          | STRING . ID ASSIGN STR ';'

    ID  shift, and go to state 21


State 9

    4 mainul: INTMAIN . instructiuni ENDMAIN

    WHILE   shift, and go to state 22
    IF      shift, and go to state 23
    FOR     shift, and go to state 24
    STRREV  shift, and go to state 25
    STRCAT  shift, and go to state 26
    PRINT   shift, and go to state 27
    EVAL    shift, and go to state 28
    ID      shift, and go to state 29
    '['     shift, and go to state 30

    instructiuni  go to state 31
    statement     go to state 32
    intructiuni   go to state 33


State 10

   13 variabila: TIP . ID ';'
   14          | TIP . ID ASSIGN regex ';'
   17 vector: TIP . '[' INDEX ']' ID ';'
   18       | TIP . '[' INDEX ']' ID ASSIGN regex ';'
   19 matrice: TIP . '[' INDEX ']' '[' INDEX ']' ID ';'
   20        | TIP . '[' INDEX ']' '[' INDEX ']' ID ASSIGN '{' regex ',' regex '}' ';'
   21 cub: TIP . '[' INDEX ']' '[' INDEX ']' '[' INDEX ']' ID ';'
   22    | TIP . '[' INDEX ']' '[' INDEX ']' '[' INDEX ']' ID ASSIGN '{' regex ',' regex ',' regex '}' ';'

    ID   shift, and go to state 34
    '['  shift, and go to state 35


State 11

    1 progr: biblioteci declaratii mainul .

    $default  reduce using rule 1 (progr)


State 12

    5 declaratii: declaratii declaratie .

    $default  reduce using rule 5 (declaratii)


State 13

    7 declaratie: variabila .

    $default  reduce using rule 7 (declaratie)


State 14

   10 declaratie: vector .

    $default  reduce using rule 10 (declaratie)


State 15

    8 declaratie: matrice .

    $default  reduce using rule 8 (declaratie)


State 16

    9 declaratie: cub .

    $default  reduce using rule 9 (declaratie)


State 17

   11 declaratie: functie .

    $default  reduce using rule 11 (declaratie)


State 18

   12 declaratie: clasa .

    $default  reduce using rule 12 (declaratie)


State 19

   23 functie: FUNCT TIP . ID '(' lista_param ')' in_functie ENDFUNCT ';'

    ID  shift, and go to state 36


State 20

   24 clasa: CLASS ID . in_clasa ENDCLASS ';' class_objects

    WHILE   shift, and go to state 22
    IF      shift, and go to state 23
    FOR     shift, and go to state 24
    STRING  shift, and go to state 37
    STRREV  shift, and go to state 25
    STRCAT  shift, and go to state 26
    PRINT   shift, and go to state 27
    EVAL    shift, and go to state 28
    TIP     shift, and go to state 38
    ID      shift, and go to state 29
    '['     shift, and go to state 30

    $default  reduce using rule 34 (fruntie_in_clasa)

    in_clasa           go to state 39
    fruntie_in_clasa   go to state 40
    variabila_from_cl  go to state 41
    vector_from_cl     go to state 42
    matrice_from_cl    go to state 43
    cub_from_cl        go to state 44
    statement          go to state 45
    intructiuni        go to state 33


State 21

   15 variabila: STRING ID . ';'
   16          | STRING ID . ASSIGN STR ';'

    ASSIGN  shift, and go to state 46
    ';'     shift, and go to state 47


State 22

   90 intructiuni: WHILE . '(' condition_for_instr ')' instructiuni ENDWHILE

    '('  shift, and go to state 48


State 23

   88 intructiuni: IF . '(' condition_for_instr ')' THEN instructiuni ENDTHEN
   89            | IF . '(' condition_for_instr ')' THEN instructiuni ENDTHEN ELSE instructiuni ENDELSE

    '('  shift, and go to state 49


State 24

   91 intructiuni: FOR . '(' TIP ID ASSIGN regex ';' condition_for_instr ';' statement ')' instructiuni ENDFOR

    '('  shift, and go to state 50


State 25

   82 statement: STRREV . '(' ID ')'

    '('  shift, and go to state 51


State 26

   83 statement: STRCAT . '(' ID ',' ID ')'
   84          | STRCAT . '(' ID ',' STR ')'

    '('  shift, and go to state 52


State 27

   85 statement: PRINT . '(' e ',' TIP ')'

    '('  shift, and go to state 53


State 28

   86 statement: EVAL . '(' e ')' '[' ID ']'

    '('  shift, and go to state 54


State 29

   73 statement: ID . '(' lista_param2 ')'
   74          | ID . '.' ID '(' lista_param2 ')'
   75          | ID . '.' ID ASSIGN regex
   76          | ID . ASSIGN regex
   77          | ID . '+' '+'
   78          | ID . '-' '-'

    ASSIGN  shift, and go to state 55
    '('     shift, and go to state 56
    '-'     shift, and go to state 57
    '+'     shift, and go to state 58
    '.'     shift, and go to state 59


State 30

   79 statement: '[' . INDEX ']' ID ASSIGN regex
   80          | '[' . INDEX ']' '[' INDEX ']' ID ASSIGN '{' regex ',' regex '}'
   81          | '[' . INDEX ']' '[' INDEX ']' '[' INDEX ']' ID ASSIGN '{' regex ',' regex ',' regex '}'

    INDEX  shift, and go to state 60


State 31

    4 mainul: INTMAIN instructiuni . ENDMAIN
   72 instructiuni: instructiuni . statement ';'

    WHILE    shift, and go to state 22
    IF       shift, and go to state 23
    FOR      shift, and go to state 24
    STRREV   shift, and go to state 25
    STRCAT   shift, and go to state 26
    PRINT    shift, and go to state 27
    ENDMAIN  shift, and go to state 61
    EVAL     shift, and go to state 28
    ID       shift, and go to state 29
    '['      shift, and go to state 30

    statement    go to state 62
    intructiuni  go to state 33


State 32

   71 instructiuni: statement . ';'

    ';'  shift, and go to state 63


State 33

   87 statement: intructiuni .

    $default  reduce using rule 87 (statement)


State 34

   13 variabila: TIP ID . ';'
   14          | TIP ID . ASSIGN regex ';'

    ASSIGN  shift, and go to state 64
    ';'     shift, and go to state 65


State 35

   17 vector: TIP '[' . INDEX ']' ID ';'
   18       | TIP '[' . INDEX ']' ID ASSIGN regex ';'
   19 matrice: TIP '[' . INDEX ']' '[' INDEX ']' ID ';'
   20        | TIP '[' . INDEX ']' '[' INDEX ']' ID ASSIGN '{' regex ',' regex '}' ';'
   21 cub: TIP '[' . INDEX ']' '[' INDEX ']' '[' INDEX ']' ID ';'
   22    | TIP '[' . INDEX ']' '[' INDEX ']' '[' INDEX ']' ID ASSIGN '{' regex ',' regex ',' regex '}' ';'

    INDEX  shift, and go to state 66


State 36

   23 functie: FUNCT TIP ID . '(' lista_param ')' in_functie ENDFUNCT ';'

    '('  shift, and go to state 67


State 37

   57 variabila_from_cl: STRING . ID ';'
   58                  | STRING . ID ASSIGN STR ';'

    ID  shift, and go to state 68


State 38

   55 variabila_from_cl: TIP . ID ';'
   56                  | TIP . ID ASSIGN regex ';'
   59 vector_from_cl: TIP . '[' INDEX ']' ID ASSIGN regex ';'
   60               | TIP . '[' INDEX ']' ID ';'
   61 matrice_from_cl: TIP . '[' INDEX ']' '[' INDEX ']' ID ASSIGN '{' regex ',' regex '}' ';'
   62                | TIP . '[' INDEX ']' '[' INDEX ']' ID ';'
   63 cub_from_cl: TIP . '[' INDEX ']' '[' INDEX ']' '[' INDEX ']' ID ASSIGN '{' regex ',' regex ',' regex '}' ';'
   64            | TIP . '[' INDEX ']' '[' INDEX ']' '[' INDEX ']' ID ';'

    ID   shift, and go to state 69
    '['  shift, and go to state 70


State 39

   24 clasa: CLASS ID in_clasa . ENDCLASS ';' class_objects

    ENDCLASS  shift, and go to state 71


State 40

   32 in_clasa: fruntie_in_clasa .
   33 fruntie_in_clasa: fruntie_in_clasa . functie2

    FUNCT  shift, and go to state 72

    $default  reduce using rule 32 (in_clasa)

    functie2  go to state 73


State 41

   27 in_clasa: variabila_from_cl . in_clasa

    WHILE   shift, and go to state 22
    IF      shift, and go to state 23
    FOR     shift, and go to state 24
    STRING  shift, and go to state 37
    STRREV  shift, and go to state 25
    STRCAT  shift, and go to state 26
    PRINT   shift, and go to state 27
    EVAL    shift, and go to state 28
    TIP     shift, and go to state 38
    ID      shift, and go to state 29
    '['     shift, and go to state 30

    $default  reduce using rule 34 (fruntie_in_clasa)

    in_clasa           go to state 74
    fruntie_in_clasa   go to state 40
    variabila_from_cl  go to state 41
    vector_from_cl     go to state 42
    matrice_from_cl    go to state 43
    cub_from_cl        go to state 44
    statement          go to state 45
    intructiuni        go to state 33


State 42

   30 in_clasa: vector_from_cl . in_clasa

    WHILE   shift, and go to state 22
    IF      shift, and go to state 23
    FOR     shift, and go to state 24
    STRING  shift, and go to state 37
    STRREV  shift, and go to state 25
    STRCAT  shift, and go to state 26
    PRINT   shift, and go to state 27
    EVAL    shift, and go to state 28
    TIP     shift, and go to state 38
    ID      shift, and go to state 29
    '['     shift, and go to state 30

    $default  reduce using rule 34 (fruntie_in_clasa)

    in_clasa           go to state 75
    fruntie_in_clasa   go to state 40
    variabila_from_cl  go to state 41
    vector_from_cl     go to state 42
    matrice_from_cl    go to state 43
    cub_from_cl        go to state 44
    statement          go to state 45
    intructiuni        go to state 33


State 43

   28 in_clasa: matrice_from_cl . in_clasa

    WHILE   shift, and go to state 22
    IF      shift, and go to state 23
    FOR     shift, and go to state 24
    STRING  shift, and go to state 37
    STRREV  shift, and go to state 25
    STRCAT  shift, and go to state 26
    PRINT   shift, and go to state 27
    EVAL    shift, and go to state 28
    TIP     shift, and go to state 38
    ID      shift, and go to state 29
    '['     shift, and go to state 30

    $default  reduce using rule 34 (fruntie_in_clasa)

    in_clasa           go to state 76
    fruntie_in_clasa   go to state 40
    variabila_from_cl  go to state 41
    vector_from_cl     go to state 42
    matrice_from_cl    go to state 43
    cub_from_cl        go to state 44
    statement          go to state 45
    intructiuni        go to state 33


State 44

   29 in_clasa: cub_from_cl . in_clasa

    WHILE   shift, and go to state 22
    IF      shift, and go to state 23
    FOR     shift, and go to state 24
    STRING  shift, and go to state 37
    STRREV  shift, and go to state 25
    STRCAT  shift, and go to state 26
    PRINT   shift, and go to state 27
    EVAL    shift, and go to state 28
    TIP     shift, and go to state 38
    ID      shift, and go to state 29
    '['     shift, and go to state 30

    $default  reduce using rule 34 (fruntie_in_clasa)

    in_clasa           go to state 77
    fruntie_in_clasa   go to state 40
    variabila_from_cl  go to state 41
    vector_from_cl     go to state 42
    matrice_from_cl    go to state 43
    cub_from_cl        go to state 44
    statement          go to state 45
    intructiuni        go to state 33


State 45

   31 in_clasa: statement . ';' in_clasa

    ';'  shift, and go to state 78


State 46

   16 variabila: STRING ID ASSIGN . STR ';'

    STR  shift, and go to state 79


State 47

   15 variabila: STRING ID ';' .

    $default  reduce using rule 15 (variabila)


State 48

   90 intructiuni: WHILE '(' . condition_for_instr ')' instructiuni ENDWHILE

    STRLEN    shift, and go to state 80
    STRCMP    shift, and go to state 81
    INDEX     shift, and go to state 82
    NR_NEG    shift, and go to state 83
    NR_FLOAT  shift, and go to state 84
    ID        shift, and go to state 85
    '('       shift, and go to state 86
    '['       shift, and go to state 87
    '!'       shift, and go to state 88

    condition_for_instr  go to state 89
    regex                go to state 90
    number               go to state 91
    e                    go to state 92


State 49

   88 intructiuni: IF '(' . condition_for_instr ')' THEN instructiuni ENDTHEN
   89            | IF '(' . condition_for_instr ')' THEN instructiuni ENDTHEN ELSE instructiuni ENDELSE

    STRLEN    shift, and go to state 80
    STRCMP    shift, and go to state 81
    INDEX     shift, and go to state 82
    NR_NEG    shift, and go to state 83
    NR_FLOAT  shift, and go to state 84
    ID        shift, and go to state 85
    '('       shift, and go to state 86
    '['       shift, and go to state 87
    '!'       shift, and go to state 88

    condition_for_instr  go to state 93
    regex                go to state 90
    number               go to state 91
    e                    go to state 92


State 50

   91 intructiuni: FOR '(' . TIP ID ASSIGN regex ';' condition_for_instr ';' statement ')' instructiuni ENDFOR

    TIP  shift, and go to state 94


State 51

   82 statement: STRREV '(' . ID ')'

    ID  shift, and go to state 95


State 52

   83 statement: STRCAT '(' . ID ',' ID ')'
   84          | STRCAT '(' . ID ',' STR ')'

    ID  shift, and go to state 96


State 53

   85 statement: PRINT '(' . e ',' TIP ')'

    STRLEN  shift, and go to state 80
    STRCMP  shift, and go to state 81
    ID      shift, and go to state 85
    '['     shift, and go to state 87

    e  go to state 97


State 54

   86 statement: EVAL '(' . e ')' '[' ID ']'

    STRLEN  shift, and go to state 80
    STRCMP  shift, and go to state 81
    ID      shift, and go to state 85
    '['     shift, and go to state 87

    e  go to state 98


State 55

   76 statement: ID ASSIGN . regex

    STRLEN    shift, and go to state 80
    STRCMP    shift, and go to state 81
    INDEX     shift, and go to state 82
    NR_NEG    shift, and go to state 83
    NR_FLOAT  shift, and go to state 84
    ID        shift, and go to state 85
    '('       shift, and go to state 99
    '['       shift, and go to state 87
    '!'       shift, and go to state 88

    regex   go to state 100
    number  go to state 91
    e       go to state 92


State 56

   73 statement: ID '(' . lista_param2 ')'

    STRLEN    shift, and go to state 80
    STRCMP    shift, and go to state 81
    INDEX     shift, and go to state 82
    NR_NEG    shift, and go to state 83
    NR_FLOAT  shift, and go to state 84
    ID        shift, and go to state 85
    '('       shift, and go to state 99
    '['       shift, and go to state 87
    '!'       shift, and go to state 88

    $default  reduce using rule 124 (lista_param2)

    regex         go to state 101
    number        go to state 91
    e             go to state 92
    lista_param2  go to state 102
    parametru2    go to state 103


State 57

   78 statement: ID '-' . '-'

    '-'  shift, and go to state 104


State 58

   77 statement: ID '+' . '+'

    '+'  shift, and go to state 105


State 59

   74 statement: ID '.' . ID '(' lista_param2 ')'
   75          | ID '.' . ID ASSIGN regex

    ID  shift, and go to state 106


State 60

   79 statement: '[' INDEX . ']' ID ASSIGN regex
   80          | '[' INDEX . ']' '[' INDEX ']' ID ASSIGN '{' regex ',' regex '}'
   81          | '[' INDEX . ']' '[' INDEX ']' '[' INDEX ']' ID ASSIGN '{' regex ',' regex ',' regex '}'

    ']'  shift, and go to state 107


State 61

    4 mainul: INTMAIN instructiuni ENDMAIN .

    $default  reduce using rule 4 (mainul)


State 62

   72 instructiuni: instructiuni statement . ';'

    ';'  shift, and go to state 108


State 63

   71 instructiuni: statement ';' .

    $default  reduce using rule 71 (instructiuni)


State 64

   14 variabila: TIP ID ASSIGN . regex ';'

    STRLEN    shift, and go to state 80
    STRCMP    shift, and go to state 81
    INDEX     shift, and go to state 82
    NR_NEG    shift, and go to state 83
    NR_FLOAT  shift, and go to state 84
    ID        shift, and go to state 85
    '('       shift, and go to state 99
    '['       shift, and go to state 87
    '!'       shift, and go to state 88

    regex   go to state 109
    number  go to state 91
    e       go to state 92


State 65

   13 variabila: TIP ID ';' .

    $default  reduce using rule 13 (variabila)


State 66

   17 vector: TIP '[' INDEX . ']' ID ';'
   18       | TIP '[' INDEX . ']' ID ASSIGN regex ';'
   19 matrice: TIP '[' INDEX . ']' '[' INDEX ']' ID ';'
   20        | TIP '[' INDEX . ']' '[' INDEX ']' ID ASSIGN '{' regex ',' regex '}' ';'
   21 cub: TIP '[' INDEX . ']' '[' INDEX ']' '[' INDEX ']' ID ';'
   22    | TIP '[' INDEX . ']' '[' INDEX ']' '[' INDEX ']' ID ASSIGN '{' regex ',' regex ',' regex '}' ';'

    ']'  shift, and go to state 110


State 67

   23 functie: FUNCT TIP ID '(' . lista_param ')' in_functie ENDFUNCT ';'

    TIP  shift, and go to state 111

    $default  reduce using rule 67 (lista_param)

    lista_param  go to state 112
    parametru    go to state 113


State 68

   57 variabila_from_cl: STRING ID . ';'
   58                  | STRING ID . ASSIGN STR ';'

    ASSIGN  shift, and go to state 114
    ';'     shift, and go to state 115


State 69

   55 variabila_from_cl: TIP ID . ';'
   56                  | TIP ID . ASSIGN regex ';'

    ASSIGN  shift, and go to state 116
    ';'     shift, and go to state 117


State 70

   59 vector_from_cl: TIP '[' . INDEX ']' ID ASSIGN regex ';'
   60               | TIP '[' . INDEX ']' ID ';'
   61 matrice_from_cl: TIP '[' . INDEX ']' '[' INDEX ']' ID ASSIGN '{' regex ',' regex '}' ';'
   62                | TIP '[' . INDEX ']' '[' INDEX ']' ID ';'
   63 cub_from_cl: TIP '[' . INDEX ']' '[' INDEX ']' '[' INDEX ']' ID ASSIGN '{' regex ',' regex ',' regex '}' ';'
   64            | TIP '[' . INDEX ']' '[' INDEX ']' '[' INDEX ']' ID ';'

    INDEX  shift, and go to state 118


State 71

   24 clasa: CLASS ID in_clasa ENDCLASS . ';' class_objects

    ';'  shift, and go to state 119


State 72

   35 functie2: FUNCT . TIP ID '(' lista_param ')' in_functie ENDFUNCT ';'

    TIP  shift, and go to state 120


State 73

   33 fruntie_in_clasa: fruntie_in_clasa functie2 .

    $default  reduce using rule 33 (fruntie_in_clasa)


State 74

   27 in_clasa: variabila_from_cl in_clasa .

    $default  reduce using rule 27 (in_clasa)


State 75

   30 in_clasa: vector_from_cl in_clasa .

    $default  reduce using rule 30 (in_clasa)


State 76

   28 in_clasa: matrice_from_cl in_clasa .

    $default  reduce using rule 28 (in_clasa)


State 77

   29 in_clasa: cub_from_cl in_clasa .

    $default  reduce using rule 29 (in_clasa)


State 78

   31 in_clasa: statement ';' . in_clasa

    WHILE   shift, and go to state 22
    IF      shift, and go to state 23
    FOR     shift, and go to state 24
    STRING  shift, and go to state 37
    STRREV  shift, and go to state 25
    STRCAT  shift, and go to state 26
    PRINT   shift, and go to state 27
    EVAL    shift, and go to state 28
    TIP     shift, and go to state 38
    ID      shift, and go to state 29
    '['     shift, and go to state 30

    $default  reduce using rule 34 (fruntie_in_clasa)

    in_clasa           go to state 121
    fruntie_in_clasa   go to state 40
    variabila_from_cl  go to state 41
    vector_from_cl     go to state 42
    matrice_from_cl    go to state 43
    cub_from_cl        go to state 44
    statement          go to state 45
    intructiuni        go to state 33


State 79

   16 variabila: STRING ID ASSIGN STR . ';'

    ';'  shift, and go to state 122


State 80

  116 e: STRLEN . '(' ID ')'
  117  | STRLEN . '(' STR ')'

    '('  shift, and go to state 123


State 81

  118 e: STRCMP . '(' ID ',' ID ')'
  119  | STRCMP . '(' ID ',' STR ')'
  120  | STRCMP . '(' STR ',' ID ')'
  121  | STRCMP . '(' STR ',' STR ')'

    '('  shift, and go to state 124


State 82

  106 number: INDEX .

    $default  reduce using rule 106 (number)


State 83

  107 number: NR_NEG .

    $default  reduce using rule 107 (number)


State 84

  108 number: NR_FLOAT .

    $default  reduce using rule 108 (number)


State 85

  109 e: ID .
  110  | ID . '.' ID
  114  | ID . '.' ID '(' lista_param2 ')'
  115  | ID . '(' lista_param2 ')'

    '('  shift, and go to state 125
    '.'  shift, and go to state 126

    $default  reduce using rule 109 (e)


State 86
